remove collapse icon bug

--- a/src/modules/Features/collapse-folders.scss
+++ b/src/modules/Features/collapse-folders.scss
@@ -18,6 +18,6 @@
   margin-right: 3px;
   margin-left: -2px;
 }
-.collapse-icon svg.svg-icon {
+.anp-collapse-folders .collapse-icon svg.svg-icon {
   color: transparent !important;
 }
