--- a/theme.css
+++ b/theme.css
@@ -3325,7 +3325,7 @@ None of the code was used, and the callout was written from scratch.
   margin-left: -2px;
 }
 
-.anp-collapse-folders .nav-folder.is-collapsed .nav-folder-collapse-indicator {
+.nav-folder.is-collapsed .nav-folder-collapse-indicator {
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 512 512'%3E%3C!--! Font Awesome Pro 6.2.0 by @fontawesome - https://fontawesome.com License - https://fontawesome.com/license (Commercial License) Copyright 2022 Fonticons, Inc. --%3E%3Cpath d='M64 480H448c35.3 0 64-28.7 64-64V160c0-35.3-28.7-64-64-64H298.5c-17 0-33.3-6.7-45.3-18.7L226.7 50.7c-12-12-28.3-18.7-45.3-18.7H64C28.7 32 0 60.7 0 96V416c0 35.3 28.7 64 64 64z'/%3E%3C/svg%3E");
   -webkit-mask-repeat: no-repeat;
   background-color: currentColor;
@@ -3336,7 +3336,7 @@ None of the code was used, and the callout was written from scratch.
   margin-left: -2px;
 }
 
-.collapse-icon svg.svg-icon {
+.anp-collapse-folders .collapse-icon svg.svg-icon {
   color: transparent !important;
 }
 
